--- a/manifests/charts/istio-control/istio-discovery/templates/telemetryv2_1.8.yaml
+++ b/manifests/charts/istio-control/istio-discovery/templates/telemetryv2_1.8.yaml
@@ -211,6 +211,7 @@ spec:
                 configuration:
                   "@type": "type.googleapis.com/google.protobuf.StringValue"
                   value: |
+                    {{- if not .Values.telemetry.v2.prometheus.configOverride.sidecarOutbound }}
                     {
                       "debug": "false",
                       "stat_prefix": "istio"{{- if .Values.global.multiCluster.clusterName }},
@@ -224,6 +225,9 @@ spec:
                       ]
                       {{- end }}
                     }
+                    {{- else }}
+                    {{ toJson .Values.telemetry.v2.prometheus.configOverride.sidecarOutbound | indent 18 }}
+                    {{- end }}
                 vm_config:
                   vm_id: stats_outbound
                   {{- if .Values.telemetry.v2.prometheus.wasmEnabled }}
@@ -262,6 +266,7 @@ spec:
                 configuration:
                   "@type": "type.googleapis.com/google.protobuf.StringValue"
                   value: |
+                    {{- if not .Values.telemetry.v2.prometheus.configOverride.sidecarInbound }}
                     {
                       "debug": "false",
                       "stat_prefix": "istio"{{- if .Values.global.multiCluster.clusterName }},
@@ -275,6 +280,9 @@ spec:
                       ]
                       {{- end }}
                     }
+                    {{- else }}
+                    {{ toJson .Values.telemetry.v2.prometheus.configOverride.sidecarInbound | indent 18 }}
+                    {{- end }}
                 vm_config:
                   vm_id: stats_inbound
                   {{- if .Values.telemetry.v2.prometheus.wasmEnabled }}
@@ -313,6 +321,7 @@ spec:
                 configuration:
                   "@type": "type.googleapis.com/google.protobuf.StringValue"
                   value: |
+                    {{- if not .Values.telemetry.v2.prometheus.configOverride.gateway }}
                     {
                       "debug": "false",
                       "stat_prefix": "istio",
@@ -327,6 +336,9 @@ spec:
                       ]
                       {{- end }}
                     }
+                    {{- else }}
+                    {{ toJson .Values.telemetry.v2.prometheus.configOverride.gateway | indent 18 }}
+                    {{- end }}
                 vm_config:
                   vm_id: stats_outbound
                   runtime: envoy.wasm.runtime.null
@@ -370,6 +382,7 @@ spec:
                 configuration:
                   "@type": "type.googleapis.com/google.protobuf.StringValue"
                   value: |
+                    {{- if not .Values.telemetry.v2.prometheus.configOverride.sidecarInbound }}
                     {
                       "debug": "false",
                       "stat_prefix": "istio"{{- if .Values.global.multiCluster.clusterName }},
@@ -383,6 +396,9 @@ spec:
                       ]
                       {{- end }}
                     }
+                    {{- else }}
+                    {{ toJson .Values.telemetry.v2.prometheus.configOverride.sidecarInbound | indent 18 }}
+                    {{- end }}
                 vm_config:
                   vm_id: tcp_stats_inbound
                   {{- if .Values.telemetry.v2.prometheus.wasmEnabled }}
@@ -419,6 +435,7 @@ spec:
                 configuration:
                   "@type": "type.googleapis.com/google.protobuf.StringValue"
                   value: |
+                    {{- if not .Values.telemetry.v2.prometheus.configOverride.sidecarOutbound }}
                     {
                       "debug": "false",
                       "stat_prefix": "istio"{{- if .Values.global.multiCluster.clusterName }},
@@ -432,6 +449,9 @@ spec:
                       ]
                       {{- end }}
                     }
+                    {{- else }}
+                    {{ toJson .Values.telemetry.v2.prometheus.configOverride.sidecarOutbound | indent 18 }}
+                    {{- end }}
                 vm_config:
                   vm_id: tcp_stats_outbound
                   {{- if .Values.telemetry.v2.prometheus.wasmEnabled }}
@@ -468,6 +488,7 @@ spec:
                 configuration:
                   "@type": "type.googleapis.com/google.protobuf.StringValue"
                   value: |
+                    {{- if not .Values.telemetry.v2.prometheus.configOverride.gateway }}
                     {
                       "debug": "false",
                       "stat_prefix": "istio"{{- if .Values.global.multiCluster.clusterName }},
@@ -481,6 +502,9 @@ spec:
                       ]
                       {{- end }}
                     }
+                    {{- else }}
+                    {{ toJson .Values.telemetry.v2.prometheus.configOverride.gateway | indent 18 }}
+                    {{- end }}
                 vm_config:
                   vm_id: tcp_stats_outbound
                   runtime: envoy.wasm.runtime.null
