Revert "update MutatingWebhook apiVersion to v1 and other minor fixes (#24723)" Retain "add mwc v1beta1 api to runtime scheme (#26187)"
This reverts commit 1772c281

--- a/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/istiod-remote/files/gen-istiod-remote.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/istiod-remote/files/gen-istiod-remote.yaml
@@ -637,7 +637,7 @@ data:
 ---
 # Source: istiod-remote/templates/mutatingwebhook.yaml
 # Installed for each revision - not installed for cluster resources ( cluster roles, bindings, crds)
-apiVersion: admissionregistration.k8s.io/v1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
 metadata:
   name: istio-sidecar-injector-default
@@ -652,9 +652,7 @@ webhooks:
         name: istiod
         namespace: istio-system
         path: "/inject"
-      caBundle: 
-    sideEffects: None
-    admissionReviewVersions: ["v1", "v1beta1"]
+      caBundle:
     rules:
       - operations: [ "CREATE" ]
         apiGroups: [""]
