--- a/istioctl/cmd/testdata/webhook/example-mutating-webhook-config.yaml
+++ b/istioctl/cmd/testdata/webhook/example-mutating-webhook-config.yaml
@@ -1,4 +1,4 @@
-apiVersion: admissionregistration.k8s.io/v1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
 metadata:
   labels:
@@ -26,4 +26,3 @@ webhooks:
         resources:
           - pods
     sideEffects: Unknown
-    admissionReviewVersions: ["v1", "v1beta1"]
