--- a/istioctl/cmd/testdata/webhook/example-validating-webhook-config.yaml
+++ b/istioctl/cmd/testdata/webhook/example-validating-webhook-config.yaml
@@ -1,4 +1,4 @@
-apiVersion: admissionregistration.k8s.io/v1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   labels:
@@ -13,7 +13,6 @@ webhooks:
         path: /validate
     failurePolicy: Fail
     name: protovalidate.istio.io
-    admissionReviewVersions: ["v1", "v1beta1"]
     namespaceSelector:
       matchLabels:
         protovalidate-validation: enabled
