--- a/manifests/charts/istiod-remote/templates/telemetryv2_1.6.yaml
+++ b/manifests/charts/istiod-remote/templates/telemetryv2_1.6.yaml
@@ -142,7 +142,7 @@ spec:
               config:
                 root_id: stats_outbound
                 configuration: |
-                  {{- if not .Values.telemetry.v2.prometheus.configOverride.sidecarOutbound }}
+                  {{- if not .Values.telemetry.v2.prometheus.configOverride.outboundSidecar }}
                   {
                     "debug": "false",
                     "stat_prefix": "istio"{{- if .Values.global.multiCluster.clusterName }},
@@ -157,7 +157,7 @@ spec:
                     {{- end }}
                   }
                   {{- else }}
-                  {{ toJson .Values.telemetry.v2.prometheus.configOverride.sidecarOutbound | indent 18 }}
+                  {{ toJson .Values.telemetry.v2.prometheus.configOverride.outboundSidecar | indent 18 }}
                   {{- end }}
                 vm_config:
                   vm_id: stats_outbound
@@ -194,7 +194,7 @@ spec:
               config:
                 root_id: stats_inbound
                 configuration: |
-                  {{- if not .Values.telemetry.v2.prometheus.configOverride.sidecarInbound }}
+                  {{- if not .Values.telemetry.v2.prometheus.configOverride.inboundSidecar }}
                   {
                     "debug": "false",
                     "stat_prefix": "istio"{{- if .Values.global.multiCluster.clusterName }},
@@ -209,7 +209,7 @@ spec:
                     {{- end }}
                   }
                   {{- else }}
-                  {{ toJson .Values.telemetry.v2.prometheus.configOverride.sidecarInbound | indent 18 }}
+                  {{ toJson .Values.telemetry.v2.prometheus.configOverride.inboundSidecar | indent 18 }}
                   {{- end }}
                 vm_config:
                   vm_id: stats_inbound
@@ -311,7 +311,7 @@ spec:
               config:
                 root_id: stats_inbound
                 configuration: |
-                  {{- if not .Values.telemetry.v2.prometheus.configOverride.sidecarInbound }}
+                  {{- if not .Values.telemetry.v2.prometheus.configOverride.inboundSidecar }}
                   {
                     "debug": "false",
                     "stat_prefix": "istio"{{- if .Values.global.multiCluster.clusterName }},
@@ -326,7 +326,7 @@ spec:
                     {{- end }}
                   }
                   {{- else }}
-                  {{ toJson .Values.telemetry.v2.prometheus.configOverride.sidecarInbound | indent 18 }}
+                  {{ toJson .Values.telemetry.v2.prometheus.configOverride.inboundSidecar | indent 18 }}
                   {{- end }}
                 vm_config:
                   vm_id: tcp_stats_inbound
@@ -361,7 +361,7 @@ spec:
               config:
                 root_id: stats_outbound
                 configuration: |
-                  {{- if not .Values.telemetry.v2.prometheus.configOverride.sidecarOutbound }}
+                  {{- if not .Values.telemetry.v2.prometheus.configOverride.outboundSidecar }}
                   {
                     "debug": "false",
                     "stat_prefix": "istio"{{- if .Values.global.multiCluster.clusterName }},
@@ -376,7 +376,7 @@ spec:
                     {{- end }}
                   }
                   {{- else }}
-                  {{ toJson .Values.telemetry.v2.prometheus.configOverride.sidecarOutbound | indent 18 }}
+                  {{ toJson .Values.telemetry.v2.prometheus.configOverride.outboundSidecar | indent 18 }}
                   {{- end }}
                 vm_config:
                   vm_id: tcp_stats_outbound
