Revert "update MutatingWebhook apiVersion to v1 and other minor fixes (#24723)" (#26285)
Retain "add mwc v1beta1 api to runtime scheme (#26187)"

This reverts commit 1772c281

(cherry picked from commit 02210d3452acdc782cd842f1560621c8504d50c2)

--- a/tests/integration/security/webhook/config/galley-webhook.yaml
+++ b/tests/integration/security/webhook/config/galley-webhook.yaml
@@ -1,4 +1,4 @@
-apiVersion: admissionregistration.k8s.io/v1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   name: istio-galley
@@ -63,7 +63,6 @@ webhooks:
           - virtualservices
     failurePolicy: Fail
     sideEffects: None
-    admissionReviewVersions: ["v1", "v1beta1"]
   - name: mixer.validation.istio.io
     clientConfig:
       service:
@@ -88,4 +87,3 @@ webhooks:
           - templates
     failurePolicy: Fail
     sideEffects: None
-    admissionReviewVersions: ["v1", "v1beta1"]
