--- a/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/base/files/gen-istio-cluster.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/base/files/gen-istio-cluster.yaml
@@ -7647,7 +7647,7 @@ subjects:
     namespace: istio-system
 ---
 # Source: base/templates/validatingwebhookconfiguration.yaml
-apiVersion: admissionregistration.k8s.io/v1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   name: istiod-istio-system
@@ -7681,4 +7681,3 @@ webhooks:
     # endpoint is ready.
     failurePolicy: Ignore
     sideEffects: None
-    admissionReviewVersions: ["v1", "v1beta1"]
