--- a/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/base/templates/validatingwebhookconfiguration.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/base/templates/validatingwebhookconfiguration.yaml
@@ -1,4 +1,4 @@
-apiVersion: admissionregistration.k8s.io/v1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   name: istiod-{{ .Values.global.istioNamespace }}
@@ -36,5 +36,4 @@ webhooks:
     # endpoint is ready.
     failurePolicy: Ignore
     sideEffects: None
-    admissionReviewVersions: ["v1", "v1beta1"]
 ---
