--- a/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/istiod-remote/files/gen-istiod-remote.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/istiod-remote/files/gen-istiod-remote.yaml
@@ -623,7 +623,7 @@ data:
 ---
 # Source: istiod-remote/templates/mutatingwebhook.yaml
 # Installed for each revision - not installed for cluster resources ( cluster roles, bindings, crds)
-apiVersion: admissionregistration.k8s.io/v1
+apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
 metadata:
   name: istio-sidecar-injector-default
@@ -637,10 +637,8 @@ webhooks:
       service:
         name: istiod
         namespace: istio-system
-        path: "/inject"      
-      caBundle: ""
-    sideEffects: None
-    admissionReviewVersions: ["v1", "v1beta1"]
+        path: "/inject"
+      caBundle:
     rules:
       - operations: [ "CREATE" ]
         apiGroups: [""]
