--- a/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/istiod-remote/templates/mutatingwebhook.yaml
+++ b/operator/cmd/mesh/testdata/manifest-generate/data-snapshot/charts/istiod-remote/templates/mutatingwebhook.yaml
@@ -26,7 +26,7 @@ webhooks:
       {{- end }}
       caBundle: {{ .Values.sidecarInjectorWebhook.caBundle }}
     sideEffects: None
-    admissionReviewVersions: ["v1", "v1beta1"]
+    admissionReviewVersions: ["v1beta1", "v1"]
     rules:
       - operations: [ "CREATE" ]
         apiGroups: [""]
