Update CoreDNS version

--- a/manifests/profiles/default.yaml
+++ b/manifests/profiles/default.yaml
@@ -137,7 +137,7 @@ spec:
     cni:
       enabled: false
     
-    # istiod remote configuration wwhen istiod isn't installed on the cluster
+    # istiod remote configuration when istiod isn't installed on the cluster
     istiodRemote:
       enabled: false
 
@@ -308,7 +308,7 @@ spec:
 
     istiocoredns:
       coreDNSImage: coredns/coredns
-      coreDNSTag: 1.6.2
+      coreDNSTag: 1.6.9
       coreDNSPluginImage: istio/coredns-plugin:0.2-istio-1.1
 
     clusterResources: true
