--- a/manifests/charts/base/crds/crd-all.gen.yaml
+++ b/manifests/charts/base/crds/crd-all.gen.yaml
@@ -5188,6 +5188,7 @@ spec:
                 enum:
                 - ALLOW
                 - DENY
+                - AUDIT
                 type: string
               rules:
                 description: Optional.
