--- a/manifests/charts/base/files/gen-istio-cluster.yaml
+++ b/manifests/charts/base/files/gen-istio-cluster.yaml
@@ -5190,6 +5190,7 @@ spec:
                 enum:
                 - ALLOW
                 - DENY
+                - AUDIT
                 type: string
               rules:
                 description: Optional.
