[release-1.7] Fix release note files

--- a/releasenotes/notes/25280.yaml
+++ b/releasenotes/notes/25280.yaml
@@ -1,7 +1,8 @@
 apiVersion: release-notes/v2
 kind: feature
 area: istioctl
-issue: 23868
+issue:
+- 23868
 
 # releaseNotes is a markdown listing of any user facing changes. This will appear in the
 # release notes.
