--- a/releasenotes/notes/crd-webhook-v1.yaml
+++ b/releasenotes/notes/crd-webhook-v1.yaml
@@ -6,7 +6,5 @@ issue:
 - 18838
 releaseNotes: |
   *Upgraded* the CRD and Webhook versions to `v1`.
-upgradeNotes: |
-  Kubernetes 1.16+ is now required for installation.
-
-
+upgradeNotes:
+  content: Kubernetes 1.16+ is now required for installation.
