--- a/releasenotes/notes/dr-analyzer.yaml
+++ b/releasenotes/notes/dr-analyzer.yaml
@@ -3,5 +3,5 @@ kind: feature
 area: networking
 securityNotes: |
   *Added* Analyzer warning for DestinationRule not using CaCertificates to validate server identity.
-upgradeNotes: |
-  Upgrade istioctl to help find DestinationRule configurations with no CaCertificates to validate server identity when using `istioctl analyze`.
+upgradeNotes:
+  content: Upgrade istioctl to help find DestinationRule configurations with no CaCertificates to validate server identity when using `istioctl analyze`.
