--- a/operator/cmd/mesh/testdata/operator/output/operator-init.yaml
+++ b/operator/cmd/mesh/testdata/operator/output/operator-init.yaml
@@ -202,15 +202,15 @@ spec:
               memory: 128Mi
           env:
             - name: WATCH_NAMESPACE
-              value: istio-test-namespace
+              value: "istio-test-namespace1,istio-test-namespace2"
             - name: LEADER_ELECTION_NAMESPACE
-              value: operator-test-namespace
+              value: "operator-test-namespace"
             - name: POD_NAME
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
-              value: operator-test-namespace
+              value: "operator-test-namespace"
 ---
 apiVersion: v1
 kind: Namespace
