Make release notes arrays (#26361)
* Make notes arrays

* Update readme to list notes as arrays

* two more

* Trim whitespace

* Formatting cleanup

--- a/releasenotes/notes/mesh-expansion.yaml
+++ b/releasenotes/notes/mesh-expansion.yaml
@@ -4,12 +4,11 @@ area: installation
 issue:
 - 25933
 
-releaseNotes: |
-  *Added* port 15012 to the default list of ports for the `istio-ingressgateway` Service.
-
-  *Deprecated* installation flags
-  - `values.global.meshExpansion.enabled` in favor of user-managed config
-  - `values.gateways.istio-ingressgateway.meshExpansionPorts` in favor of `components.ingressGateways[name=istio-ingressgateway].k8s.service.ports`
+releaseNotes:
+- |
+  **Added** port 15012 to the default list of ports for the `istio-ingressgateway` Service.
+- |
+  **Deprecated** installation flags `values.global.meshExpansion.enabled` in favor of user-managed config and `values.gateways.istio-ingressgateway.meshExpansionPorts` in favor of `components.ingressGateways[name=istio-ingressgateway].k8s.service.ports`
 
 upgradeNotes:
 - title: Avoid use of mesh expansion installation flags
