update release note

--- a/releasenotes/notes/trust-domain-validation.yaml
+++ b/releasenotes/notes/trust-domain-validation.yaml
@@ -4,4 +4,5 @@ area: security
 issue:
   - 26224
 releaseNotes: |
-  *Added* Trust Domain Validation by default rejecting requests in sidecars if the request is not from same trust domain.
+  *Added* Trust Domain Validation by default rejecting requests in sidecars if the request is not from same trust domain
+  or if it's not in the TrustDomainAliases specified in the MeshConfig.
