moved end to end tests to integration tests

--- a/manifests/charts/istio-cni/templates/configmap-cni.yaml
+++ b/manifests/charts/istio-cni/templates/configmap-cni.yaml
@@ -32,8 +32,8 @@ metadata:
     app: istio-cni
     release: {{ .Release.Name }}
 data:
-  config.properties: |
-    name: istio-cni
-    selector: k8s-app=istio-cni-node
-    namespace: kube-system
+  config: |
+        - name: istio-cni
+          selector: k8s-app=istio-cni-node
+          namespace: kube-system
   {{- end }}
