--- a/tests/integration/mixer/envoy/testdata/enable_accesslog.yaml
+++ b/tests/integration/mixer/envoy/testdata/enable_accesslog.yaml
@@ -4,6 +4,7 @@ metadata:
   name: istio-policy
   namespace: istio-system
 spec:
+  configPatches:
     - applyTo: NETWORK_FILTER
       match:
         context: SIDECAR_INBOUND
